// Message API
syntax = "proto3";
package xmtp.message_api.v1;

import "google/api/annotations.proto";

option go_package = "github.com/xmtp/proto/v3/go/message_api/v1";
option java_package = "org.xmtp.proto.message.api.v1";

// RPC
service MessageApi {
    // Publish messages to the network
    rpc Publish (PublishRequest) returns (PublishResponse) {
        option (google.api.http) = {
        post: "/message/v1/publish"
        body: "*"
    };
    }
    // Subscribe to a stream of new envelopes matching a predicate
    rpc Subscribe (SubscribeRequest) returns (stream Envelope) {
        option (google.api.http) = {
        post: "/message/v1/subscribe"
        body: "*"
    };
    }
    // Subscribe to a stream of all messages
    rpc SubscribeAll (SubscribeAllRequest) returns (stream Envelope) {
        option (google.api.http) = {
            post: "/message/v1/subscribe-all"
            body: "*"
        };
    }
    // Query the store for messages
    rpc Query (QueryRequest) returns (QueryResponse) {
        option (google.api.http) = {
        post: "/message/v1/query"
        body: "*"
    };
    }
    // BatchQuery containing a set of queries to be processed
    rpc BatchQuery (BatchQueryRequest) returns (BatchQueryResponse) {
        option (google.api.http) = {
        post: "/message/v1/batch-query"
        body: "*"
    };
    }
}

// Sort direction
enum SortDirection {
    SORT_DIRECTION_UNSPECIFIED = 0;
    SORT_DIRECTION_ASCENDING = 1;
    SORT_DIRECTION_DESCENDING = 2;
}

// This is based off of the go-waku Index type, but with the
// receiverTime and pubsubTopic removed for simplicity.
// Both removed fields are optional
message IndexCursor {
    bytes digest = 1;
    uint64 sender_time_ns = 2;
}

// Wrapper for potentially multiple types of cursor
message Cursor {
    // Making the cursor a one-of type, as I would like to change the way we
    // handle pagination to use a precomputed sort field.
    // This way we can handle both methods
    oneof cursor {
        IndexCursor index = 1;
    }
}

// This is based off of the go-waku PagingInfo struct, but with the direction
// changed to our SortDirection enum format
message PagingInfo {
    // Note: this is a uint32, while go-waku's pageSize is a uint64
    uint32 limit = 1;
    Cursor cursor = 2;
    SortDirection direction = 3;
}

// Envelope encapsulates a message while in transit.
message Envelope {
    // The topic the message belongs to,
    // If the message includes the topic as well
    // it MUST be the same as the topic in the envelope.
    string content_topic = 1;
    // Message creation timestamp
    // If the message includes the timestamp as well
    // it MUST be equivalent to the timestamp in the envelope.
    uint64 timestamp_ns = 2;
    bytes message = 3;
}

// Publish
message PublishRequest {
    repeated Envelope envelopes = 1;
}

// Empty message as a response for Publish
message PublishResponse{
}

// Subscribe
message SubscribeRequest {
    repeated string content_topics = 1;
}

// SubscribeAll
message SubscribeAllRequest {
}


// Query
message QueryRequest {
    repeated string content_topics = 1;
    uint64 start_time_ns = 2;
    uint64 end_time_ns = 3;
    PagingInfo paging_info = 4;
}

// The response, containing envelopes, for a query
message QueryResponse{
    repeated Envelope envelopes = 1;
    PagingInfo paging_info = 2;
}

// BatchQuery
message BatchQueryRequest {
    repeated QueryRequest requests = 1;
}

// Response containing a list of QueryResponse messages
message BatchQueryResponse {
    repeated QueryResponse responses = 1;
}
